🎨 style(index.css): adjust position of button and editIcon ✨ feat(index.css): add cancelListingButton style 🔧 chore(CreateListing.jsx): add TODO comment for geolocation input The position of the button and editIcon in the index.css file has been adjusted for better alignment. A new style for cancelListingButton has been added to the index.css file. In the CreateListing.jsx file, a TODO comment has been added to remind the developer to consider adding a geolocation input for the user.

--- a/src/index.css
+++ b/src/index.css
@@ -76,13 +76,13 @@ button {
 	cursor: pointer;
 	position: absolute;
 	top: -3%;
-	right: -2%;
+	right: -2.9%;
 }
 .editIcon {
 	cursor: pointer;
 	position: absolute;
-	top: -3.4%;
-	right: 20px;
+	top: -2.4%;
+	right: 10px;
 }
 
 .pageContainer,
@@ -805,6 +805,11 @@ button {
 .createListingButton {
 	margin-top: 5rem;
 }
+
+.cancelListingButton {
+	margin-top: 3rem;
+}
+
 
 .offers {
 	margin-bottom: 10rem;
